--- a/pieraksts/templates/pieraksts.html
+++ b/pieraksts/templates/pieraksts.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
-{% block style %}{% endblock %}
+{% block style %}
+.modal-backdrop { opacity:0.8 !important; }
+{% endblock %}
 
 {% block content %}
 <div class="modal fade" id="Noteikumi" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
@@ -13,7 +15,7 @@
  <p>1. Pamatprincipi </p>
  <p class="text-justify">1.1. Noteikumi nosaka Uzņēmuma un Klienta tiesības, pienākumus un atbildību. </p>
  <p class="text-justify">1.2. Klients veicot online rezervēšanas platformā Uzņēmuma piedāvāto pakalpojuma rezervāciju, pierakstoties uz nodarbībām, ievada platformas atbilstošā laukā savu Vārdu, Uzvārdu, tālruņa numuru un unikālu e-pasta adresi. Papildus tam Klients veic atzīmi platformas piedāvātajā laukā, ar to izsakot piekrišanu, ka uz viņa ievadīto Telefona numuru tiks sūtīti SMS paziņojumi saistībā ar izmaiņām Uzņēmuma pakalpojumos. Uz norādīto e-pasta adresi Klients saņem informāciju par nodarbību, uz kuru ir veicis reģistrēšanos kā arī saiti, uz kuras nospiežot, iespējams atcelt reģistrāciju.</p>
- <p class="text-justify">1.3. Veicot Noteikumu 2.punktā norādītās darbības informācija par Klientu tiek ievadīta Uzņēmuma datu bāzē, un Uzņēmums ir tiesīgs Klientam sūtīt SMS paziņojumus saistībā ar Uzņēmuma pakalpojumiem.</p>
+ <p class="text-justify">1.3. Veicot Noteikumu 1.punktā norādītās darbības informācija par Klientu tiek ievadīta Uzņēmuma datu bāzē, un Uzņēmums ir tiesīgs Klientam sūtīt SMS paziņojumus saistībā ar Uzņēmuma pakalpojumiem.</p>
  <p class="text-justify">1.4. Uzņēmumam ir tiesības vienpusēji izdarīt grozījumus vai papildinājumus Noteikumos, tos publicējot online rezervēšanas platformā.</p>
 </div>
 <div class="modal-footer">
