--- a/pieraksts/templates/select.html
+++ b/pieraksts/templates/select.html
@@ -4,47 +4,42 @@
 <div id="myCarousel" class="carousel slide" data-interval="false" data-wrap="false">
  <div class="carousel-inner" role="listbox">
   <div class="item active">
+<!--   <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="border:1px solid black;"> -->
 
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">27/03 P</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">28/03 O</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">29/03 T</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">30/03 C</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">31/03 Pk</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">01/04 S</div>
-  </div>
-  <div class="item">
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">02/04 Sv</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">03/04 P</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">04/04 O</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">05/04 T</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">06/04 C</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">07/04 Pk</div>
-  </div>
-  <div class="item">
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">08/04 S</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">09/04 Sv</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">10/04 P</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">11/04 O</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">12/04 T</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">13/04 C</div>
-  </div>
-  <div class="item">
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">14/04 P</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">15/04 S</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">16/04 Sv</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">17/04 P</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">18/04 O</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">19/04 T</div>
-  </div>
-  <div class="item">
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">20/04 C</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">21/04 Pk</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">22/04 S</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">23/04 Sv</div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
-  </div>
+{% for gra in grafiks %}
+   <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="padding-left:0px; padding-right:0px;">
+    <div style="border:1px solid black; margin:1px 1px 1px 1px;"><center>{{ gra.0.sakums|date:"d/m l" }}</center></div>
+{% for g in gra %}
+<!-- if:
+	1- vietu daudz == div zaļš
+	2- viena vieta == div dzeltens
+	3- vietu nav == div sarkans, bez linka
+ -->
+    <div style="border:1px solid black; margin:1px 1px 1px 1px;"><a href="/pieraksts/{{ g.id }}/">
+
+     {{ g.sakums|date:"H:i" }}<!-- | {{ g.treneris }} | {{ g.vietas }}--></a>
+    </div>
+{% endfor %}
+   </div>
+
+{% if forloop.counter == 4 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+{% if forloop.counter == 8 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+{% if forloop.counter == 12 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+{% if forloop.counter == 16 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+{% if forloop.counter == 20 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+{% if forloop.counter == 24 and carousel_end != forloop.counter %}  </div>
+  <div class="item">{% endif %}
+
+{% endfor %}
+
+<!-- </div> -->
  </div>
+
  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
   <span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="margin-top:21px;"></span>
   <span class="sr-only">Previous</span>
@@ -55,14 +50,5 @@
  </a>
 </div>
 <div class="row" style="padding-top:22px;"></div>
-
-{{ print }}<br>
-{{ print2 }}<br>
-{% for gra in grafiks %}
-{% for g in gra %}
-<a href="/pieraksts/{{ g.id }}/">{{ g }} | {{ g.sakums|date:"H:i d/m/Y" }} | {{ g.treneris }} | {{ g.telpa }} | {{ g.vietas }}</a><br>
-{% endfor %}
-<br><br>
-{% endfor %}
 
 {% endblock %}
