--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="LV-LV">
 <head>
-<title>{{ title }}</title>
+<title>Pieraksta sistēma - {{ title }}</title>
  <meta charset="UTF-8">
  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
